[gd_scene load_steps=15 format=3 uid="uid://bagtndimgpaee"]

[ext_resource type="Script" uid="uid://cur8abreu6wmw" path="res://levels/objects/chest/boss_chest.gd" id="1_7bnhl"]
[ext_resource type="Texture2D" uid="uid://bidl5brkimhxo" path="res://assets/items/chest/chest_close_01.png" id="1_o3ntu"]
[ext_resource type="Texture2D" uid="uid://bjcqjfm23puad" path="res://assets/items/chest/chest_close_02.png" id="2_7bnhl"]
[ext_resource type="Texture2D" uid="uid://dqrogefu4p788" path="res://assets/items/chest/chest_close_03.png" id="3_jn43n"]
[ext_resource type="Texture2D" uid="uid://btnwd6wmuxmda" path="res://assets/items/chest/chest_open_01.png" id="4_gkbk2"]
[ext_resource type="Texture2D" uid="uid://dkn0i1fahffwr" path="res://assets/items/chest/chest_open_02.png" id="5_uy604"]
[ext_resource type="Texture2D" uid="uid://br8hwwry0gxvd" path="res://assets/items/chest/chest_open_03.png" id="6_ocjtt"]
[ext_resource type="Texture2D" uid="uid://b67b2vn864ieo" path="res://assets/items/chest/chest_open_04.png" id="7_irqq8"]
[ext_resource type="Texture2D" uid="uid://bwcclik4ny1ry" path="res://assets/items/chest/chest_open_05.png" id="8_lvw38"]
[ext_resource type="Script" uid="uid://0qvd447gmgon" path="res://scripts/area_component/interactive_area_2d.gd" id="10_jn43n"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_o3ntu"]
bounce = 0.2

[sub_resource type="SpriteFrames" id="SpriteFrames_cdrdx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_o3ntu")
}, {
"duration": 1.0,
"texture": ExtResource("2_7bnhl")
}, {
"duration": 1.0,
"texture": ExtResource("3_jn43n")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_gkbk2")
}, {
"duration": 1.0,
"texture": ExtResource("5_uy604")
}, {
"duration": 1.0,
"texture": ExtResource("6_ocjtt")
}, {
"duration": 1.0,
"texture": ExtResource("7_irqq8")
}, {
"duration": 1.0,
"texture": ExtResource("8_lvw38")
}],
"loop": false,
"name": &"open",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o3ntu"]
size = Vector2(34, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gkbk2"]
size = Vector2(82, 33)

[node name="BossChest" type="RigidBody2D"]
physics_material_override = SubResource("PhysicsMaterial_o3ntu")
script = ExtResource("1_7bnhl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
self_modulate = Color(0.6, 0.001, 0.5, 1)
position = Vector2(0, -7)
sprite_frames = SubResource("SpriteFrames_cdrdx")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_o3ntu")

[node name="InteractiveArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("10_jn43n")
metadata/_custom_type_script = "uid://0qvd447gmgon"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveArea2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_gkbk2")

[connection signal="body_entered" from="InteractiveArea2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="InteractiveArea2D" to="." method="_on_body_exited"]
[connection signal="interacted" from="InteractiveArea2D" to="." method="attempt_open_chest"]
[connection signal="interaction_available" from="InteractiveArea2D" to="." method="_on_interaction_available"]
[connection signal="interaction_unavailable" from="InteractiveArea2D" to="." method="_on_interaction_unavailable"]
